--- a/templates/main.html
+++ b/templates/main.html
@@ -7,7 +7,17 @@
   <title>DescordClone</title>
 </head>
 <body>
+
     {% include 'navbar.html' %}
+  
+    {% if messages %}
+      <ul class="messages">
+        {% for message in messages %}
+        <li>{{ message }}</li>
+          {% endfor %}
+      </ul>
+    {% endif %}
+
     {% block content %}
 
 
