--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,4 +4,10 @@
 <form action="{% url 'home' %}" method="GET">
     <input type="text" name="q" placeholder="Search Rooms ...">
 </form>
+
+{% if request.user.is_authenticated %}
+    <a href="{% url 'logout' %}">LogOut</a>
+{% else %}
+    <a href="{% url 'login' %}">LogIn</a>
+{% endif %}
 <hr>
